# TeleScope

./: .gitignore  README.md  analytics_subs.sqlite3  pyproject.toml
analytics/: settings.py
analytics/apps/bot/: admin.py  main_bot.py  middleware.py  models.py
analytics/apps/bot/migrations/: 0001_initial.py
analytics/apps/management/: apps.py
analytics/apps/management/management/commands/: run_bot.py
analytics/service/database/: botuser_dao.py
