[tool.poetry]
name = "tgsubsanalytics"
version = "0.1.0"
description = ""
authors = ["Suliman Sagindykov"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
django = "4.2.15"
django-grappelli = "4.0.1"
environs = "11.0.0"
gunicorn = "23.0.0"
pytelegrambotapi = "4.22.1"
aiohttp = "3.10.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

